# QFax

./: QFax.pro  README.md  ipmodemt38  main.cpp  mainwindow.cpp  mainwindow.ui
efax-gtk-3.2.13/: AUTHORS  BUGS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  efax-gtk.1  efax-gtk.desktop  efax-gtk.spec  efax-gtk.spec.in  efax-gtkrc  mail_fax  print_fax
efax-gtk-3.2.13/efax/: Makefile  Makefile.am  Makefile.in  Makefile.orig  PATCHES  efax.1  efax.c  efax.c.orig  efaxio.c  efaxio.c.orig  efaxio.h  efaxlib.c  efaxlib.c.orig  efaxlib.h  efaxmsg.c  efaxmsg.c.orig  efaxmsg.h  efaxos.c  efaxos.c.orig  efaxos.h  efix.1  efix.c  fax
efax-gtk-3.2.13/efax-gtk-faxfilter/: Makefile  Makefile.am  Makefile.in  efax-gtk-faxfilter  efax-gtk-socket-client.cpp
efax-gtk-3.2.13/efax-gtk-faxfilter/.deps/: efax-gtk-socket-client.Po
efax-gtk-3.2.13/efax/.deps/: efax.Po  efaxio.Po  efaxlib.Po  efaxmsg.Po  efaxos.Po  efix.Po
efax-gtk-3.2.13/m4/: ChangeLog
efax-gtk-3.2.13/po/: LINGUAS  Makefile  Makefile.in  Makevars  POTFILES  POTFILES.in  bg.gmo  bg.po  ca.gmo  ca.po  de.gmo  de.po  efax-gtk.pot  el.gmo  el.po  en_GB.gmo  en_GB.po  es.gmo  es.po  fr.gmo  fr.po  he.gmo  he.po  hu.gmo  hu.po  it.gmo  it.po  pl.gmo  pl.po  ru.gmo  ru.po  sq.gmo  sq.po  sv.gmo  sv.po  zh_CN.gmo  zh_CN.po  zh_TW.gmo  zh_TW.po
efax-gtk-3.2.13/src/: Makefile  Makefile.am  Makefile.in  addressbook.cpp  addressbook.h  addressbook_icons.h  dialogs.cpp  dialogs.h  efax_controller.cpp  efax_controller.h  fax_list.cpp  fax_list.h  fax_list_icons.h  fax_list_manager.cpp  fax_list_manager.h  fax_list_manager_icons.h  file_list.cpp  file_list.h  file_list_icons.h  gpl.h  helpfile.cpp  helpfile.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  menu_icons.h  prog_defs.h  redial_queue.cpp  redial_queue.h  redial_queue_icons.h  settings.cpp  settings.h  settings_help.cpp  settings_help.h  settings_icons.h  socket_list.cpp  socket_list.h  socket_list_icons.h  (+7 more)
efax-gtk-3.2.13/src/.deps/: addressbook.Po  dialogs.Po  efax_controller.Po  fax_list.Po  fax_list_manager.Po  file_list.Po  helpfile.Po  logger.Po  main.Po  mainwindow.Po  redial_queue.Po  settings.Po  settings_help.Po  socket_list.Po  socket_notify.Po  socket_server.Po  tray_icon.Po
efax-gtk-3.2.13/src/utils/: LGPL.TXT  Makefile  Makefile.am  Makefile.in  cairo_handle.h  icon_info_handle.h  mono_tiff_print_manager.cpp  mono_tiff_print_manager.h  pango_layout_iter_handle.h  selected_rows_handle.cpp  selected_rows_handle.h  sem_sync.h  tiff_handle.h  toolbar_append_widget.cpp  toolbar_append_widget.h  tree_path_handle.h  tree_row_reference_handle.h  utf8_utils.cpp  utf8_utils.h
efax-gtk-3.2.13/src/utils/.deps/: mono_tiff_print_manager.Po  selected_rows_handle.Po  toolbar_append_widget.Po  utf8_utils.Po
extmodem/: CMakeCache.txt  Makefile  cmake_install.cmake  run.sh
extmodem/src/: example.cbp  frame.h
iaxmodem-1.2.0/: CHANGES  FAQ  Makefile  Makefile.in  README  TODO  build  configure  iaxmodem-cfg.ttyIAX  iaxmodem.1  iaxmodem.c  iaxmodem.inf  iaxmodem.init.debian  iaxmodem.init.fedora  iaxmodem.init.suse  termpkg-ttydforfax.patch
iaxmodem-1.2.0/compat/: daemon.c  headers.h  strings.c  timers.c
iaxmodem-1.2.0/lib/libiax2/: Makefile  Makefile.in  config.status  configure  libtool
iaxmodem-1.2.0/lib/libiax2/src/: Makefile  Makefile.in  iax-client.h  iax.c  iax2-parser.c  iax2.h
iaxmodem-1.2.0/lib/libiax2/src/.deps/: iax.Plo  iax2-parser.Plo  jitterbuf.Plo  md5.Plo
iaxmodem-1.2.0/lib/spandsp/: Makefile  config-h.in  config.status  configure  configure.ac  libtool
iaxmodem-1.2.0/lib/spandsp/autom4te.cache/: output.0  requests  traces.0
iaxmodem-1.2.0/lib/spandsp/doc/: Makefile  doxygen
iaxmodem-1.2.0/lib/spandsp/spandsp-sim/: Makefile
iaxmodem-1.2.0/lib/spandsp/src/: Makefile  at_interpreter.c  config.h  spandsp.h
iaxmodem-1.2.0/lib/spandsp/src/.deps/: adsi.Plo  async.Plo  at_interpreter.Plo  awgn.Plo  bell_r2_mf.Plo  bert.Plo  bit_operations.Plo  bitstream.Plo  complex_filters.Plo  complex_vector_float.Plo  crc.Plo  dds_float.Plo  dds_int.Plo  dtmf.Plo  echo.Plo  fax.Plo  filter_tools.Po  fsk.Plo  g711.Plo  g722_decode.Plo  g722_encode.Plo  g726.Plo  gsm0610_decode.Plo  gsm0610_encode.Plo  gsm0610_long_term.Plo  gsm0610_lpc.Plo  gsm0610_preprocess.Plo  gsm0610_rpe.Plo  gsm0610_short_term.Plo  hdlc.Plo  ima_adpcm.Plo  logging.Plo  lpc10_analyse.Plo  lpc10_decode.Plo  lpc10_encode.Plo  lpc10_placev.Plo  lpc10_voicing.Plo  make_at_dictionary.Po  make_modem_filter.Po  modem_connect_tones.Plo  (+38 more)
iaxmodem-1.2.0/lib/spandsp/src/spandsp/: at_interpreter.h
iaxmodem-1.2.0/lib/spandsp/test-data/: Makefile  Makefile.in
iaxmodem-1.2.0/lib/spandsp/test-data/etsi/: Makefile
iaxmodem-1.2.0/lib/spandsp/test-data/etsi/fax/: Makefile
iaxmodem-1.2.0/lib/spandsp/test-data/itu/: Makefile
iaxmodem-1.2.0/lib/spandsp/test-data/itu/fax/: Makefile
iaxmodem-1.2.0/lib/spandsp/test-data/local/: Makefile
iaxmodem-1.2.0/lib/spandsp/tests/: Makefile
linmodem/: dsp.h  lm.c  v34eq.c  v34phase2.c  v34priv.h
